header & section-1 commit

--- a/index.html
+++ b/index.html
@@ -10,9 +10,45 @@
   <title>New year-2024</title>
   <!-- all link hear -->
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="resources/icon.jpg" type="image/x-icon">
 </head>
 <!-- Header Part end -->
 <body>
-  
+  <div class="container">
+    <!-- Header part started -->
+    <header>
+     <div>
+      <h3>Happy New Year</h3>
+     <h1>New Year Party Celebration</h1>
+     </div>
+    </header>
+    <main>
+      <!-- Discount Part start -->
+      <section>
+        <div class="discount">
+          <h1>
+            65% OFF
+          </h1>
+        </div>
+      </section>
+      <!-- discount part End -->
+      <!-- Welcome to Midnight Party card started -->
+      <section class="celebration_card">
+        <div class="celebration_title">
+          <h1>Welcome to midnight party</h1>
+          <p>Welcome the New Year with fantastic savings! Embrace a fresh start and celebrate with our exclusive New Year discount party. </p>
+          <a href="">JOIN NOW</a>
+        </div>
+        <div class="celebration_img">
+          <img src="resources/Group 70.png" alt="">
+        </div>
+      </section>
+      <!-- Welcome to Midnight Party card end -->
+
+      <section>
+
+      </section>
+    </main>
+  </div>
 </body>
 </html>
