discount part added

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
     </header>
     <main>
       <!-- Discount Part start -->
-      <section>
+      <section class="discount_section">
         <div class="discount">
-          <h1>
-            65% OFF
-          </h1>
+          <h1>65% OFF</h1>
+          <h6>OUR HOLIDAY DEALS ARE BETTER</h6>
+          <h3>ALL CATEGORIES</h3>
+        </div>
+        <div class="discount_img">
+          <img src="resources/New Year Photo.png" alt="">
         </div>
       </section>
       <!-- discount part End -->
