--- a/index.html
+++ b/index.html
@@ -45,12 +45,19 @@
         <div class="celebration_img">
           <img src="resources/Group 70.png" alt="">
         </div>
+        <!-- Midnight Party card end -->
       </section>
-      <!-- Welcome to Midnight Party card end -->
-
-      <section>
-
+      
+      <!-- Date, time, place started -->
+      <section class="date_time_section">
+        <div class="date_time">
+          <h5><span>Place:</span> New park Hotel</h5>
+          <h5><span>Date:</span> 31 December Night 2023</h5>
+          <h5><span>Time:</span> Evening 7.30 pm To 12.30 Am</h5>
+          <button>JOIN NOW</button>
+        </div>
       </section>
+      <!-- Date, time, place end -->
     </main>
   </div>
 </body>
