--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@
         </div>
       </section>
       <!-- Date, time, place end -->
+
+      <!-- next offer section start -->
+      <section class="next_offer_section">
+        <div class="next_offer common">
+          <h6>NEW BEST OFFER</h6>
+          <h3>Coming Soon</h3>
+          <p>"Stay tuned for our upcoming offer! Get ready to indulge in exclusive deals arriving soon. Don't miss out on the excitement—your next favorite offer is on its way!"</p>
+        </div>
+        <div class="offer_img common">
+          <div class="offer_img_border">
+            <img src="resources/Ellipse 1.png" alt="">
+          </div>
+        </div>
+        <div class="offer_2024 common">
+          <div>
+            <h3>2024</h3>
+          <p>Enjoy the new Year and wait upcoming offer. Stay ourself for the big offer for new Year</p>
+          </div>
+          <div class="img_new_year">
+            <img src="resources/Group 96.png" alt="">
+          </div>
+        </div>
+      </section>
+      <!-- next offer section end -->
     </main>
   </div>
 </body>
