holiday discount added

--- a/index.html
+++ b/index.html
@@ -82,6 +82,24 @@
         </div>
       </section>
       <!-- next offer section end -->
+
+      <!-- Holiday sale Offer section -->
+      <section class="holiday_offer_section">
+        <div class="holiday_offer">
+          <h6>WHAT IS FUNCTIONAL</h6>
+          <h1><span>Holidays</span> Sale 50%</h1>
+          <p>
+            Capture the holiday spirit with our exclusive offer! Delight in festive discounts on a variety of products perfect for gifting or treating yourself. From cozy home essentials to dazzling gifts, embrace the joy of the season with our special holiday offer. Don't miss out—shop now and spread the cheer!
+          </p>
+        </div>
+        <!-- Holiday sale img card -->
+        <div class="holiday_offer_img">
+          <img src="resources/Rectangle 2.png" alt="" class="hr">
+          <img src="resources/Group 44.png" alt="" class="discount">
+          <img src="resources/Group 75.png" alt="" class="gift_box">
+          <img src="resources/Rectangle 1.png" alt="" class="woman">
+        </div>
+      </section>
     </main>
   </div>
 </body>
