--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
           <img src="resources/Group 75.png" alt="" class="gift_box">
           <img src="resources/Rectangle 1.png" alt="" class="woman">
         </div>
+        <!-- Holiday sale img card end-->
+      </section>
+      <!-- Holiday sale Offer section off-->
+
+      <!-- Portfolio Section on -->
+      <section class="portfolio_section">
+        <div class="portfolio_title_div">
+          <h6>THE BEST GIFTS</h6>
+          <h3>Our Awesome Portfolio</h3>
+          <p>Indulge in luxury at our boutique: exquisite leather goods, stylish shoes, and premium cosmetics. Elevate your style with sophistication, from fine leather to fashionable footwear, and beauty essentials that redefine elegance. Experience opulence in every detail.</p>
+        </div>
+        <div class="portfolio">
+          <div class="portfolio_1">
+            <img src="resources/Rectangle 3.png" alt="img">
+            <img src="resources/Rectangle 4.png" alt="img">
+            <img src="resources/Rectangle 5.png" alt="img">
+          </div>
+          <div class="portfolio_2">
+            <img src="resources/Rectangle 6.png" alt="img">
+            <img src="resources/Rectangle 7.png" alt="img">
+            <img src="resources/Rectangle 8.png" alt="img">
+          </div>
+        </div>
       </section>
     </main>
   </div>
