--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
           </div>
         </div>
       </section>
+      <!-- Portfolio Section done -->
+
+      <section class="subscribe_section">
+        <div class="subscribe">
+          <img src="resources/Group 61.png" alt="email_logo">
+          <h3>Subscribe Newsletter</h3>
+          <p>Join our community! Subscribe to our newsletter for exclusive updates, insider deals, and early access to new arrivals. Be the first to know about promotions and trends—sign up now for a world of fashion and style!</p>
+        </div>
+        <div class="input_div">
+          <input type="email" name="" id="" placeholder="user@gmail.com">
+          <input type="submit" value="submit">
+        </div>
+      </section>
     </main>
   </div>
 </body>
