--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       </section>
       <!-- Portfolio Section done -->
 
+      <!-- Subscribe Newsletter section start -->
       <section class="subscribe_section">
         <div class="subscribe">
           <img src="resources/Group 61.png" alt="email_logo">
@@ -136,7 +137,49 @@
           <input type="submit" value="submit">
         </div>
       </section>
+      <!-- Subscribe Newsletter section end -->
     </main>
+    <!-- Main Div end -->
+    
   </div>
+  <!-- footer tag on -->
+  <footer>
+    <div class="footer_div">
+      <div class="address">
+        <h6>44, Big Building Roosevelt Street
+          Beach Gardens Florida 33410</h6>
+      </div>
+      <div class="number_div">
+        <div class="number">
+          <img src="resources/Call.png" alt="logo">
+          <h6>+00 123 584 124</h6>
+        </div>
+        <div class="number">
+          <img src="resources/Website.png" alt="logo">
+          <h6>www.lighthouse.com</h6>
+        </div>
+      </div>
+    </div>
+    <ul class="social_media">
+      <li><a href="https://www.facebook.com/sadekur.rahman.73744" target="_blank">
+        <img src="resources/Facebook.png" alt="">
+      </a></li>
+      <li><a href="#">
+        <img src="resources/Linkedin.png" alt="">
+      </a></li>
+      <li><a href="https://www.instagram.com/sadekur.rahman.73744/" target="_blank">
+        <img src="resources/Instagram.png" alt="">
+      </a></li>
+      <li><a href="https://twitter.com/sadekcric" target="_blank">
+        <img src="resources/Twitter.png" alt="">
+      </a></li>
+    </ul>
+    <hr>
+    <div class="copyright">
+      <h6>2024, All Rights Reserved.</h6>
+      <h6>Unsubscribe</h6>
+    </div>
+  </footer>
+  <!-- footer tag off -->
 </body>
 </html>
