--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <!-- Discount Part start -->
       <section class="discount_section">
-        <div class="discount">
+        <div class="discount_1">
           <h1>65% OFF</h1>
           <h6>OUR HOLIDAY DEALS ARE BETTER</h6>
           <h3>ALL CATEGORIES</h3>
