--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="celebration_title">
           <h1>Welcome to midnight party</h1>
           <p>Welcome the New Year with fantastic savings! Embrace a fresh start and celebrate with our exclusive New Year discount party. </p>
-          <a href="">JOIN NOW</a>
+          <a href="" class="join_now">JOIN NOW</a>
         </div>
         <div class="celebration_img">
           <img src="resources/Group 70.png" alt="">
@@ -177,7 +177,7 @@
     <hr>
     <div class="copyright">
       <h6>2024, All Rights Reserved.</h6>
-      <h6>Unsubscribe</h6>
+      <button class="Unsubscribe">Unsubscribe</button>
     </div>
   </footer>
   <!-- footer tag off -->
