portfolio section update

--- a/index.html
+++ b/index.html
@@ -111,15 +111,28 @@
           <p>Indulge in luxury at our boutique: exquisite leather goods, stylish shoes, and premium cosmetics. Elevate your style with sophistication, from fine leather to fashionable footwear, and beauty essentials that redefine elegance. Experience opulence in every detail.</p>
         </div>
         <div class="portfolio">
-          <div class="portfolio_1">
-            <img src="resources/Rectangle 3.png" alt="img">
-            <img src="resources/Rectangle 4.png" alt="img">
-            <img src="resources/Rectangle 5.png" alt="img">
+          <div class="row">
+            <div class="clumn">
+              <img src="resources/Rectangle 3.png" alt="img" width="100%">
+            </div>
+            <div class="clumn">
+              <img src="resources/Rectangle 4.png" alt="img" width="100%">
+            </div>
+            <div class="clumn">
+              <img src="resources/Rectangle 5.png" alt="img" width="100%">
+            </div>
+            
           </div>
-          <div class="portfolio_2">
-            <img src="resources/Rectangle 6.png" alt="img">
-            <img src="resources/Rectangle 7.png" alt="img">
-            <img src="resources/Rectangle 8.png" alt="img">
+          <div class="row">
+            <div class="clumn">
+              <img src="resources/Rectangle 6.png" alt="img" width="100%">
+            </div>
+            <div class="clumn">
+            <img src="resources/Rectangle 7.png" alt="img" width="100%">
+            </div>
+            <div class="clumn">
+              <img src="resources/Rectangle 8.png" alt="img" width="100%">
+            </div>
           </div>
         </div>
       </section>
