--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <!-- next offer section end -->
 
       <!-- Holiday sale Offer section -->
-      <section class="holiday_offer_section">
+      <section class="holiday_offer_section ">
         <div class="holiday_offer">
           <h6>WHAT IS FUNCTIONAL</h6>
           <h1><span>Holidays</span> Sale 50%</h1>
@@ -160,7 +160,7 @@
   <!-- footer tag on -->
   <footer>
     <div class="footer_div">
-      <div class="address">
+      <div class="address footer_address">
         <h6>44, Big Building Roosevelt Street
           Beach Gardens Florida 33410</h6>
       </div>
